# energy-optimization-framework

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md
outputs/results/: ablation_study.csv  ablation_study.tex  bosch_parsed.csv  dataset_inspection_report.txt  energy_X_test.csv  energy_shap_insights.txt  energy_shap_values.csv  energy_y_test.csv  framework_comparison.tex  full_results_report.md  mendeley_parsed.csv  optuna_studies.db  paper_numbers.txt  roughness_X_test.csv  roughness_shap_insights.txt  roughness_shap_values.csv  roughness_y_test.csv  runtime_table.tex  shap_importance_table.csv  shap_importance_table.tex  statistical_tests_energy.csv  statistical_tests_energy.tex  statistical_tests_roughness.csv  statistical_tests_roughness.tex  statistical_tests_time.csv  statistical_tests_time.tex  test_shap_insights.txt  test_shap_values.csv  time_X_test.csv  (+5 more)
scripts/: assemble_manuscript.py  assemble_submission_package.py  audit_manuscript.py  compile_paper_figures.py  convert_manuscript_to_docx.py  convert_manuscript_to_latex.py  evaluate_all_models.py  generate_combined_figures.py  generate_framework_figure.py  generate_latex_tables.py  git_commit_pipeline.py  retrain_energy.py  run_ablation.py  run_optimization.py  run_optimization_scenarios.py  run_proximity_validation.py  run_shap_analysis.py  run_statistical_tests.py  run_topsis.py  train_all_models.py
src/: __init__.py
tests/: test_loaders.py  test_metrics.py  test_models.py  test_optimization.py  test_preprocessors.py  test_shap.py  test_topsis.py
(+97 files in other folders)
