[project]
name = "energy-optimization-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "h5py>=3.16.0",
    "numba>=0.59.0",
    "pytest>=9.1.1",
    "scikit-criteria>=0.9",
    "shap>=0.50.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.5.0",
    "pymoo>=0.6.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "python-docx>=1.1.0"
]
